--- a/app/templates/pages/calendar.html
+++ b/app/templates/pages/calendar.html
@@ -1109,4 +1109,6 @@
         </div>
     </div>
 </section>
+
+<script src="{{ url_for('static', filename='js/calendar.js') }}"></script>
 {% endblock %}
