--- a/app/templates/pages/news.html
+++ b/app/templates/pages/news.html
@@ -8,7 +8,7 @@
             <a href="javascript:;" class="main_notification">
                 <div>
                     <div>
-                        <img src="./images/notification/CNTT.jpg" alt=""/>
+                        <img src="../static/images/notification/CNTT.jpg" alt=""/>
                         <p>Giới thiệu về khoa phụ trách</p>
                     </div>
                 </div>
@@ -17,7 +17,7 @@
                 <a href="javascript:;" class="notification">
                     <div>
                         <div>
-                            <img src="./images/notification/another.jpg" alt=""/>
+                            <img src="../static/images/notification/another.jpg" alt=""/>
                             <p>Thông báo</p>
                         </div>
                     </div>
@@ -25,7 +25,7 @@
                 <a href="javascript:;" class="notification">
                     <div>
                         <div>
-                            <img src="./images/notification/another.jpg" alt=""/>
+                            <img src="../static/images/notification/another.jpg" alt=""/>
                             <p>Thông báo</p>
                         </div>
                     </div>
@@ -33,7 +33,7 @@
                 <a href="javascript:;" class="notification">
                     <div>
                         <div>
-                            <img src="./images/notification/another.jpg" alt=""/>
+                            <img src="../static/images/notification/another.jpg" alt=""/>
                             <p>Thông báo</p>
                         </div>
                     </div>
@@ -41,7 +41,7 @@
                 <a href="javascript:;" class="notification">
                     <div>
                         <div>
-                            <img src="./images/notification/another.jpg" alt=""/>
+                            <img src="../static/images/notification/another.jpg" alt=""/>
                             <p>Thông báo</p>
                         </div>
                     </div>
@@ -57,7 +57,7 @@
         <a href="javascript:;">
             <div class="new flex">
                 <div class="new_img">
-                    <img src="./images/News/lich-khai-giang-2022.png" alt="new1">
+                    <img src="../static/images/News/lich-khai-giang-2022.png" alt="new1">
                 </div>
                 <div class="new_content">
                     <h2>[Thông báo] Lịch Nghỉ Tết 2022</h2>
@@ -100,7 +100,7 @@
         <a href="javascript:;">
             <div class="new flex">
                 <div class="new_img">
-                    <img src="./images/News/thong-bao-nghi-le-gio-to-hung-vuong.jpg" alt="new2">
+                    <img src="../static/images/News/thong-bao-nghi-le-gio-to-hung-vuong.jpg" alt="new2">
                 </div>
                 <div class="new_content">
                     <h2>THÔNG BÁO NGHỈ LỄ GIỖ TỔ HÙNG VƯƠNG & ĐẠI LỄ 30/04 - 01/05/2022</h2>
@@ -146,7 +146,7 @@
         <a href="javascript:;">
             <div class="new flex">
                 <div class="new_img">
-                    <img src="./images/News/nghi_le.jpg" alt="new3">
+                    <img src="../static/images/News/nghi_le.jpg" alt="new3">
                 </div>
                 <div class="new_content">
                     <h2>[Thông báo] Nghỉ Lễ Quốc Khánh 02/09/2022</h2>
@@ -172,7 +172,7 @@
         <a href="javascript:;">
             <div class="new flex">
                 <div class="new_img">
-                    <img src="./images/News/tuyen_dung.webp" alt="new4" style="width: 43vh;">
+                    <img src="../static/images/News/tuyen_dung.webp" alt="new4" style="width: 43vh;">
                 </div>
                 <div class="new_content">
                     <h2>[Thông báo] Tuyển dụng CTV Giảng dạy các lớp Tin học Ứng dụng</h2>
