--- a/app/templates/pages/paymentGuide.html
+++ b/app/templates/pages/paymentGuide.html
@@ -36,7 +36,7 @@
                         <li>
                             Thanh toán qua <span class="bank">Ngân Hàng Agribank</span>
                             <div class="bank_info flex">
-                                <img src="./images/Payment/agribank.png" alt="agribank">
+                                <img src="../static/images/Payment/agribank.png" alt="agribank">
                                 <p>
                                     Số tài khoản đơn vị hưởng: <strong>1900201031556</strong> tại Agribank Chi nhánh Trung Tâm Sài Gòn.
                                     <br/>
@@ -50,7 +50,7 @@
                         <li>
                             Thanh toán qua <span class="bank">App Viettel Money</span>
                             <div class="bank_info flex">
-                                <img src="./images/Payment/viettelMoney.webp" alt="agribank">
+                                <img src="../static/images/Payment/viettelMoney.webp" alt="agribank">
                                 <p>
                                     <strong>Bước 1:</strong> Vào mục tìm kiếm và tìm Đại học Mở Tp. Hồ Chí Minh và chọn Trung Tâm Tin Học.
                                     <br/>
