--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -21,9 +21,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="../static/js/main.js"></script>
     <script type="text/javascript" src="../static/js/home.js"></script>
-    <script type="text/javascript" src="../static/js/calendar.js"></script>
 </head>
-<body>
+<body style="background-color: rgb(255, 255, 255)">
 {% include 'layout/header.html' %}
 
 <div class="container">
