--- a/app/templates/pages/services.html
+++ b/app/templates/pages/services.html
@@ -126,7 +126,7 @@
           ><span style="font-size: 14px"
           ><img
                   alt=""
-                  src="./images/mohinh/NetMD.png"
+                  src="../static/images/mohinh/NetMD.png"
                   style="width: 100%; height: 100%"/></span
           ></span>
         </div>
@@ -303,7 +303,7 @@
           ><span
           ><img
                   alt=""
-                  src="./images/chungchi/Chung_chi_quan_ly_du_an.jpg"
+                  src="../static/images/chungchi/Chung_chi_quan_ly_du_an.jpg"
                   style="width: 60%; height: 100%x"/></span
           ></span>
         </div>
