--- a/app/templates/admin/login.html
+++ b/app/templates/admin/login.html
@@ -1,8 +1,8 @@
 <!--post để mã hóa thông tin-->
 <form method="post" action="{{ url_for('login_admin') }}">
     <div class="form-group">
-        <label for="email">Email address:</label>
-        <input type="text" class="form-control" name="username" placeholder="Enter email" id="email">
+        <label for="name">Account</label>
+        <input type="text" class="form-control" name="username" placeholder="Enter email" id="name">
     </div>
     <div class="form-group">
         <label for="pwd">Password:</label>
