chua hoan chinh

--- a/app/templates/pages/calendar.html
+++ b/app/templates/pages/calendar.html
@@ -38,7 +38,7 @@
                         <td>{{course.startdate}}</td>
                         <td>{{course.address}}</td>
                         <td>
-                            <button class="btn btn-danger" onclick="registerCourse({{course.id}}, '{{course.classname}}', '{{course.starttime}}',
+                            <button class="btn btn-danger calendar_accept" onclick="registerCourse({{course.id}}, '{{course.classname}}', '{{course.starttime}}',
                                 '{{course.endtime}}', '{{course.startdate}}', '{{course.address}}', '{{course.type}}')">
                                 Đăng Ký
                             </button>
@@ -87,7 +87,7 @@
                         <td>{{course.startdate}}</td>
                         <td>{{course.address}}</td>
                         <td>
-                            <button class="btn btn-danger" onclick="registerCourse({{course.id}}, '{{course.classname}}', '{{course.starttime}}',
+                            <button class="btn btn-danger calendar_accept" onclick="registerCourse({{course.id}}, '{{course.classname}}', '{{course.starttime}}',
                                 '{{course.endtime}}', '{{course.startdate}}', '{{course.address}}', '{{course.type}}')">
                                 Đăng Ký
                             </button>
@@ -136,7 +136,7 @@
                         <td>{{course.startdate}}</td>
                         <td>{{course.address}}</td>
                        <td>
-                            <button class="btn btn-danger" onclick="registerCourse({{course.id}}, '{{course.classname}}', '{{course.starttime}}',
+                            <button class="btn btn-danger calendar_accept" onclick="registerCourse({{course.id}}, '{{course.classname}}', '{{course.starttime}}',
                                 '{{course.endtime}}', '{{course.startdate}}', '{{course.address}}', '{{course.type}}')">
                                 Đăng Ký
                             </button>
@@ -185,7 +185,7 @@
                         <td>{{course.startdate}}</td>
                         <td>{{course.address}}</td>
                         <td>
-                            <button class="btn btn-danger" onclick="registerCourse({{course.id}}, '{{course.classname}}', '{{course.starttime}}',
+                            <button class="btn btn-danger calendar_accept" onclick="registerCourse({{course.id}}, '{{course.classname}}', '{{course.starttime}}',
                                 '{{course.endtime}}', '{{course.startdate}}', '{{course.address}}', '{{course.type}}')">
                                 Đăng Ký
                             </button>
@@ -235,7 +235,7 @@
                         <td>{{course.startdate}}</td>
                         <td>{{course.address}}</td>
                        <td>
-                            <button class="btn btn-danger" onclick="registerCourse({{course.id}}, '{{course.classname}}', '{{course.starttime}}',
+                            <button class="btn btn-danger calendar_accept" onclick="registerCourse({{course.id}}, '{{course.classname}}', '{{course.starttime}}',
                                 '{{course.endtime}}', '{{course.startdate}}', '{{course.address}}', '{{course.type}}')">
                                 Đăng Ký
                             </button>
@@ -289,7 +289,7 @@
                         <td>{{course.address}}</td>
                         <td>
                        <td>
-                            <button class="btn btn-danger" onclick="registerCourse({{course.id}}, '{{course.classname}}', '{{course.starttime}}',
+                            <button class="btn btn-danger calendar_accept" onclick="registerCourse({{course.id}}, '{{course.classname}}', '{{course.starttime}}',
                                 '{{course.endtime}}', '{{course.startdate}}', '{{course.address}}', '{{course.type}}')">
                                 Đăng Ký
                             </button>
@@ -339,7 +339,7 @@
                         <td>{{course.startdate}}</td>
                         <td>{{course.address}}</td>
                        <td>
-                            <button class="btn btn-danger" onclick="registerCourse({{course.id}}, '{{course.classname}}', '{{course.starttime}}',
+                            <button class="btn btn-danger calendar_accept" onclick="registerCourse({{course.id}}, '{{course.classname}}', '{{course.starttime}}',
                                 '{{course.endtime}}', '{{course.startdate}}', '{{course.address}}', '{{course.type}}')">
                                 Đăng Ký
                             </button>
@@ -388,7 +388,7 @@
                         <td>{{course.startdate}}</td>
                         <td>{{course.address}}</td>
                        <td>
-                            <button class="btn btn-danger" onclick="registerCourse({{course.id}}, '{{course.classname}}', '{{course.starttime}}',
+                            <button class="btn btn-danger calendar_accept" onclick="registerCourse({{course.id}}, '{{course.classname}}', '{{course.starttime}}',
                                 '{{course.endtime}}', '{{course.startdate}}', '{{course.address}}', '{{course.type}}')">
                                 Đăng Ký
                             </button>
@@ -437,7 +437,7 @@
                         <td>{{course.startdate}}</td>
                         <td>{{course.address}}</td>
                         <td>
-                            <button class="btn btn-danger" onclick="registerCourse({{course.id}}, '{{course.classname}}', '{{course.starttime}}',
+                            <button class="btn btn-danger calendar_accept" onclick="registerCourse({{course.id}}, '{{course.classname}}', '{{course.starttime}}',
                                 '{{course.endtime}}', '{{course.startdate}}', '{{course.address}}', '{{course.type}}')">
                                 Đăng Ký
                             </button>
@@ -487,7 +487,7 @@
                         <td>{{course.startdate}}</td>
                         <td>{{course.address}}</td>
                        <td>
-                            <button class="btn btn-danger" onclick="registerCourse({{course.id}}, '{{course.classname}}', '{{course.starttime}}',
+                            <button class="btn btn-danger calendar_accept" onclick="registerCourse({{course.id}}, '{{course.classname}}', '{{course.starttime}}',
                                 '{{course.endtime}}', '{{course.startdate}}', '{{course.address}}', '{{course.type}}')">
                                 Đăng Ký
                             </button>
