--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -100,24 +100,37 @@
     </div>
 </header>
 
-<nav>
-    <ul class="flex menu">
-        <li><a href="{{ url_for('index') }}" id="home"><i class="fa-solid fa-house"></i></a></li>
-        <li class="sub"><a href="{{ url_for('calendar') }}">Lịch khai giảng</a></li>
-        <li class="sub"><a href=".{{ url_for('edu') }}">Chương trình đào tạo</a></li>
-        <li><a href="{{ url_for('services') }}">Dịch vụ</a></li>
-        <li><a href="{{ url_for('news') }}">Tin tức</a></li>
-        <li><a href="{{ url_for('payment_guide') }}">Hướng dẫn thanh toán</a></li>
-        <li>
-            <a class="nav_tablet-link" href="{{url_for('registercourse')}}">&#128722; Đăng ký khóa học<span
-                    class="badge bg-danger course-counter">{{course.total_quantity}}</span></a></li>
-        <li><a href="{{ url_for('contact') }}">Liên hệ</a></li>
-        <li><a href="{{ url_for('login_admin') }}">Đăng nhập</a></li>
-        <li id="nav_find" class="flex">
-            <form action="">
-                <input type="text" placeholder="Tìm kiếm">
-                <button><i class="fa-solid fa-magnifying-glass"></i></button>
-            </form>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="justify-content: space-between">
+    <!-- Links -->
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('index') }}"><i class="fa-solid fa-house"></i></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('calendar') }}">Lịch khai giảng</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('edu') }}">Chương trình đào tạo</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('services') }}">Dịch vụ</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('news') }}">Tin tức</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('payment_guide') }}">Hướng dẫn thanh toán</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('contact') }}">Liên hệ</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('registercourse') }}">Khóa học &#128722;<span
+                    class="badge bg-danger course-counter">{{course.total_quantity}}</span></a>
         </li>
     </ul>
+    <form class="d-flex" method="get" action="/">
+        <input class="form-control me-2" type="text" name="kw" placeholder="Nhập từ khóa ...">
+        <button class="btn btn-primary" type="submit">Tìm</button>
+    </form>
 </nav>
